src/components/CheckboxRadio/index.css
.root {
  position: relative;
  display: inline-flex;
}

.input {
  position: absolute;
  opacity: 0;
}

.control {
  position: relative;
  top: .125em;
  display: inline-block;
  flex-shrink: 0;
  vertical-align: middle;
  width: 1.25em;
  height: 1.25em;
  background-color: white;
  border: 1px solid hsl(0, 0%, 80%);
}

.radio-control {
  border-radius: 50%;
}

.control::after {
  position: absolute;
  top: 50%;
  left: 50%;
  display: block;
  content: '';
}

.checkbox-control::after {
  width: .5em;
  height: .875em;
  transform: translate(-50%, -66.6666%) rotate(45deg);
}

.input:checked + .checkbox-control::after {
  border: .1875em solid cadetblue;
  border-top: none;
  border-left: none;
}

.radio-control::after {
  width: .625em;
  height: .625em;
  border-radius: inherit;
  transform: translate(-50%, -50%);
}

.input:checked + .radio-control::after {
  background-color: cadetblue;
}

.text {
  flex-grow: 1;
}

.normal .text {
  margin-left: .5em;
}

.reverse {
  flex-direction: row-reverse;
}

.reverse .text {
  margin-right: .5em;
}

.wide {
  display: flex;
  width: 100%;
}

.readOnly .control {
  border-color: hsl(0, 0%, 90%);
}

.disabled {
  opacity: .5;
}

